--- a/FrontEnd/Views/Movies/Details.cshtml
+++ b/FrontEnd/Views/Movies/Details.cshtml
@@ -68,7 +68,7 @@
             @if(Model.ReleasedDateTimesDay1 != null){
                 @foreach ( var rdt in Model.ReleasedDateTimesDay1) 
                 {
-                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time })'">
+                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time, Price = Model.Price })'">
                         @rdt.Time.ToString(@"hh\:mm")
                     </buton>
                 }
@@ -80,7 +80,7 @@
             @if(Model.ReleasedDateTimesDay1 != null){
                 @foreach ( var rdt in Model.ReleasedDateTimesDay2) 
                 {
-                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time })'">
+                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time, Price = Model.Price })'">
                         @rdt.Time.ToString(@"hh\:mm")
                     </buton>
                 }
@@ -92,7 +92,7 @@
             @if(Model.ReleasedDateTimesDay1 != null){
                 @foreach ( var rdt in Model.ReleasedDateTimesDay3) 
                 {
-                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time })'">
+                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time, Price = Model.Price })'">
                         @rdt.Time.ToString(@"hh\:mm")
                     </buton>
                 }
@@ -104,7 +104,7 @@
             @if(Model.ReleasedDateTimesDay1 != null){
                 @foreach ( var rdt in Model.ReleasedDateTimesDay4) 
                 {
-                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time })'">
+                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time, Price = Model.Price })'">
                         @rdt.Time.ToString(@"hh\:mm")
                     </buton>
                 }
@@ -116,7 +116,7 @@
             @if(Model.ReleasedDateTimesDay1 != null){
                 @foreach ( var rdt in Model.ReleasedDateTimesDay5) 
                 {
-                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time })'">
+                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time, Price = Model.Price })'">
                         @rdt.Time.ToString(@"hh\:mm")
                     </buton>
                 }
@@ -128,7 +128,7 @@
             @if(Model.ReleasedDateTimesDay1 != null){
                 @foreach ( var rdt in Model.ReleasedDateTimesDay6) 
                 {
-                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time })'">
+                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time, Price = Model.Price })'">
                         @rdt.Time.ToString(@"hh\:mm")
                     </buton>
                 }
@@ -140,7 +140,7 @@
             @if(Model.ReleasedDateTimesDay1 != null){
                 @foreach ( var rdt in Model.ReleasedDateTimesDay7) 
                 {
-                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time })'">
+                    <buton type="button" class="btn btn-secondary mt-3 mr-5 ml-0 px-5" onclick="location.href='@Url.Action("Details", "Seats", new { Id = rdt.RoomId, MovieId = Model.Id, Date = rdt.Date, Time = rdt.Time, Price = Model.Price })'">
                         @rdt.Time.ToString(@"hh\:mm")
                     </buton>
                 }
