front end: rename from invoice to payment

--- a/FrontEnd/Views/Payments/Create.cshtml
+++ b/FrontEnd/Views/Payments/Create.cshtml
@@ -1,7 +1,7 @@
-﻿@model FrontEnd.ViewModels.InvoiceViewModel
+﻿@model FrontEnd.ViewModels.PaymentViewModel
 
 @{
-    ViewData["Title"] = "Invoice";
+    ViewData["Title"] = "Payment";
 }
 
 <div class="text-center" style="font-size: 40px; line-height: 70vh;">
