--- a/FrontEnd/Views/Payments/Index.cshtml
+++ b/FrontEnd/Views/Payments/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@using FrontEnd.ViewModels
-@model FrontEnd.ViewModels.InvoiceViewModel
+@model FrontEnd.ViewModels.PaymentViewModel
 
 @{
-    ViewData["Title"] = "Invoice";
+    ViewData["Title"] = "To Pay";
 }
 
 <input type="hidden" id="roomId" value="@Model.RoomId"/>
@@ -11,7 +11,7 @@
 <input type="hidden" id="totalAmount" value="@Model.TotalAmount"/>
 
 <div class="container pt-3">
-    <h3>Invoice</h3>
+    <h3>To Pay</h3>
     <div class="row">
         <div class="col-3">
             <img src="@Model.MovieImage" alt="@Model.Movie" style="width:200px; height: 250px; object-fit:cover"/>
@@ -83,18 +83,18 @@
             var totalAmount = $("#totalAmount").val();
             var bookedSeat = $("#bookedSeat").val();
 
-            var invoices = {};
-            invoices.RoomId = roomId;
-            invoices.MovieId = movieId;
-            invoices.TotalAmount = totalAmount;
-            invoices.BookedSeat = bookedSeat;
+            var payments = {};
+            payments.RoomId = roomId;
+            payments.MovieId = movieId;
+            payments.TotalAmount = totalAmount;
+            payments.BookedSeat = bookedSeat;
 
             $.ajax({
                 type: "POST",
-                url: "/Invoices/Create",
+                url: "/Payments/Create",
                 data: {RoomId: roomId, MovieId: movieId, TotalAmount: totalAmount, BookedSeat: bookedSeat },
                 success: function () {
-                        var url = "/Invoices/Create";
+                        var url = "/Payments/Create";
                         window.location = url;
                     }
             });
