front end: rename from seat to room

--- a/FrontEnd/Views/Rooms/Details.cshtml
+++ b/FrontEnd/Views/Rooms/Details.cshtml
@@ -1,7 +1,7 @@
-﻿@model FrontEnd.ViewModels.SeatViewModel
+﻿@model FrontEnd.ViewModels.RoomViewModel
 
 @{
-    ViewData["Title"] = "Seats";
+    ViewData["Title"] = "Rooms";
 }
 
 <input type="hidden" id="roomId" value="@Model.Id"/>
