admin: add to seating plan db

--- a/Admin/Views/Shared/Components/EditReleasedDateTimeTable/Index.cshtml
+++ b/Admin/Views/Shared/Components/EditReleasedDateTimeTable/Index.cshtml
@@ -24,7 +24,14 @@
         <label class="control-label">RoomNo</label>
     </div>
     <div class="col-9">
-       <input type="number" id="txtRoomNo"  class="form-control"/>
+        <select class="form-select" aria-label="selectRoom" id="txtRoomNo">
+          <option value="1" selected>1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+        </select>
     </div>
 </div>
 <div class="row mb-3">
