--- a/FrontEnd/Views/Payments/Index.cshtml
+++ b/FrontEnd/Views/Payments/Index.cshtml
@@ -5,8 +5,9 @@
     ViewData["Title"] = "To Pay";
 }
 
-<input type="hidden" id="roomId" value="@Model.RoomId"/>
-<input type="hidden" id="movieId" value="@Model.MovieId"/>
+<input type="hidden" id="releasedDateTimeId" value="@Model.ReleasedDateTimeId"/>
+@*<input type="hidden" id="roomId" value="@Model.RoomId"/>
+<input type="hidden" id="movieId" value="@Model.MovieId"/>*@
 <input type="hidden" id="bookedSeat" value="@Model.BookedSeat"/>
 <input type="hidden" id="totalAmount" value="@Model.TotalAmount"/>
 
@@ -77,22 +78,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $("body").on("click", "#btnConfirm", function () {
-            console.log("click");
-            var roomId = $("#roomId").val();
-            var movieId = $("#movieId").val();
+            //var roomId = $("#roomId").val();
+            //var movieId = $("#movieId").val();
+            var releasedDateTimeId = $("#releasedDateTimeId").val();
             var totalAmount = $("#totalAmount").val();
             var bookedSeat = $("#bookedSeat").val();
 
             var payments = {};
-            payments.RoomId = roomId;
-            payments.MovieId = movieId;
+            //payments.RoomId = roomId;
+            //payments.MovieId = movieId;
+            payments.ReleasedDateTimeId = releasedDateTimeId;
             payments.TotalAmount = totalAmount;
             payments.BookedSeat = bookedSeat;
 
             $.ajax({
                 type: "POST",
                 url: "/Payments/Create",
-                data: {RoomId: roomId, MovieId: movieId, TotalAmount: totalAmount, BookedSeat: bookedSeat },
+                data: {ReleasedDateTimeId: releasedDateTimeId, TotalAmount: totalAmount, BookedSeat: bookedSeat },
                 success: function () {
                         var url = "/Payments/Create";
                         window.location = url;
