admin: rename 'sales' to 'payment histories'

--- a/Admin/Views/Home/Index.cshtml
+++ b/Admin/Views/Home/Index.cshtml
@@ -11,8 +11,8 @@
         </button>
     </div>
     <div class="col-6">
-        <button class="btn btn-outline-dark w-100 h-100" onclick="location.href='@Url.Action("Index", "Sales")'">
-            Sale
+        <button class="btn btn-outline-dark w-100 h-100" onclick="location.href='@Url.Action("Index", "PaymentHistories")'">
+            Payment History
         </button>
     </div>
 </div>
