--- a/Admin/Views/PaymentHistories/Index.cshtml
+++ b/Admin/Views/PaymentHistories/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Admin.ViewModels.SaleViewModel>
+﻿@model IEnumerable<Admin.ViewModels.PaymentHistoryViewModel>
 
 @{
-    ViewData["Title"] = "Sale";
+    ViewData["Title"] = "Payment History";
 }
 
-<h1>Sale</h1>
+<h1>Payment History</h1>
 
 <table class="table table-striped">
     <thead>
