--- a/Admin/Views/Shared/_Layout.cshtml
+++ b/Admin/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">Movie</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Sales" asp-action="Index">Sale</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Payment Histories" asp-action="Index">Payment History</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
